<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Genaza</string>
    <string name="search">Search</string>
    <string name="noDataAvailable">No data available</string>
    <string name="addDead">Add dead</string>
    <string name="name">Dead name</string>
    <string name="phone">Phone</string>
    <string name="timePlace">مكان وموعد الجنازة مثال(بعد صلاة العشاء عند مسجد النور)</string>
    <string name="notes">ملاحظات ( مثال: زوجة الأستاذ فلان الفلاني )</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="sendDone">Send done</string>
    <string name="download">Download Photo</string>
    <string name="open_camera">Open gallery</string>
    <string name="supportImage">Supports: JPG, JPEG2000, PNG</string>
</resources>