<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            card_view:cardCornerRadius="@dimen/_10sdp">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_image"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/bg_edit"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:background="@drawable/bg_edit"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/timePlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/timePlace"
            android:background="@drawable/bg_edit"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="text"
            tools:ignore="Autofill" />


        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:background="@drawable/bg_edit"
            android:padding="@dimen/_12sdp"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="text"
            android:minLines="3"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/save"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/bg_edit"
            android:layout_marginTop="@dimen/_30sdp" />

    </LinearLayout>
</ScrollView>
