<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.yousef.genaza.activity.MainActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:src="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/_5sdp">

            <TextView
                android:id="@+id/hijriDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format12Hour="hh:mm a"
                android:format24Hour="hh:mm a"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_marginTop="-15dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginVertical="@dimen/_3sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardBackgroundColor="@color/hint">

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:queryHint="@string/search"
                android:iconifiedByDefault="false"
                android:background="@android:color/transparent"
                android:queryBackground="@android:color/transparent" />
            </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/myItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/notification_unread"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_dead"
        tools:itemCount="3"/>

    <FrameLayout
        android:id="@+id/progressContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_gravity="center"/>
    </FrameLayout>

    <TextView
        android:id="@+id/noDataAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noDataAvailable"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:contentDescription="@string/addDead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_edit"
        app:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        app:elevation="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
